[gd_scene load_steps=6 format=3 uid="uid://366kewl7ljjq"]

[ext_resource type="Script" path="res://main.gd" id="1_olkxx"]
[ext_resource type="PackedScene" uid="uid://431jwwj4oqw0" path="res://player.tscn" id="1_tcgac"]
[ext_resource type="Texture2D" uid="uid://1o5sehols0tj" path="res://assets/images/background.png" id="3_k2vu7"]
[ext_resource type="PackedScene" uid="uid://cbp88e68ysxkx" path="res://enemies/slime.tscn" id="4_savcv"]

[sub_resource type="Curve2D" id="Curve2D_xjmxl"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -64, -65, 0, 0, 0, 0, 1216, -65, 0, 0, 0, 0, 1216, 703, 0, 0, 0, 0, -64, 703, 0, 0, 0, 0, -64, -65)
}
point_count = 5

[node name="Main" type="Node"]
script = ExtResource("1_olkxx")
Enemy = ExtResource("4_savcv")

[node name="TextureRect" type="TextureRect" parent="."]
offset_right = 1152.0
offset_bottom = 648.0
texture = ExtResource("3_k2vu7")

[node name="Player" parent="." instance=ExtResource("1_tcgac")]
position = Vector2(570, 328)

[node name="EnemySpawnPath" type="Path2D" parent="."]
position = Vector2(0, 1)
curve = SubResource("Curve2D_xjmxl")

[node name="EnemySpawnPoint" type="PathFollow2D" parent="EnemySpawnPath"]
position = Vector2(-64, -65)

[node name="SpawnTimer" type="Timer" parent="."]
autostart = true

[connection signal="timeout" from="SpawnTimer" to="." method="spawn_enemy"]
